--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3 class="logo">logo</h3>
+            <a href=""><button class="primary-btn">Join Now</button></a>
+        </nav>
     </header>
 
     <main>
 
-        <div>
-            <h3>logo</h3>
-            <a href=""><button>Join Now</button></a>
-        </div>
+       
 
     </main>
 
